hphp/test/quick/method-undefined.php.expectf

Fatal error: Call to undefined method c::foo() %s on line 8
